# required

./: CMakeLists.txt  LICENSE  README.markdown
Components/: CMakeLists.txt
Components/Project/: CMakeLists.txt
Components/Project/src/: FileCategory.cpp  FileCategory.h  Project.cpp  Project.h  ProjectSerializer.cpp  ProjectWidget.cpp  ProjectWidget.h
Examples/: CMakeLists.txt
Examples/project_deserialize/: CMakeLists.txt  project_deserialize.cpp
Examples/project_serialize/: CMakeLists.txt  project_serialize.cpp
Examples/project_widget/: CMakeLists.txt  ProjectWidgetDemoWindow.cpp  ProjectWidgetDemoWindow.h  project_widget.cpp
Required/: CMakeLists.txt  global.h
Required/Project/: FileCategory.cpp  FileCategory.h  Project.cpp  Project.h  ProjectException.h  ProjectSerializer.cpp  ProjectSerializer.h  ProjectWidget.cpp  ProjectWidget.h  ProjectWidget.ui
