################################################################################
#
# Example programs using Required
#
################################################################################

include_directories("${CMAKE_SOURCE_DIR}")

add_subdirectory(project_widget)
add_subdirectory(project_serialize)
add_subdirectory(project_deserialize)
